Bug 792823 - patch 2: BluetoothOppManager interface and prototype

--- a/dom/bluetooth/Makefile.in
+++ b/dom/bluetooth/Makefile.in
@@ -52,6 +52,7 @@ CPPSRCS += \
   BluetoothParent.cpp \
   BluetoothServiceChildProcess.cpp \
   BluetoothHfpManager.cpp \
+  BluetoothOppManager.cpp \
   $(NULL)
 
 XPIDLSRCS = \
