--- a/dom/bluetooth/Makefile.in
+++ b/dom/bluetooth/Makefile.in
@@ -54,6 +54,7 @@ CPPSRCS += \
   BluetoothUnixSocketConnector.cpp \
   BluetoothHfpManager.cpp \
   BluetoothOppManager.cpp \
+  BluetoothScoManager.cpp \
   ObexBase.cpp \
   $(NULL)
 
