--- a/dom/bluetooth/Makefile.in
+++ b/dom/bluetooth/Makefile.in
@@ -53,6 +53,7 @@ CPPSRCS += \
   BluetoothServiceChildProcess.cpp \
   BluetoothUnixSocketConnector.cpp \
   BluetoothHfpManager.cpp \
+  BluetoothScoManager.cpp \
   $(NULL)
 
 ifdef MOZ_B2G_RIL
